added CSS to project

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
         <ul>
       
-          <li>Enter your CSS notes here.</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+
+          <li>A padding indicates how much space we want around the content of the element.</li>
         
         </ul>
 
